[tool.poetry]
name = "beets-check"
version = "0.15.0"
description = "beets plugin verifying file integrity with checksums"
authors = ["Thomas Scholtes <geigerzaehler@axiom.fm>"]
license = "MIT"
readme = "README.md"
repository = "http://www.github.com/geigerzaehler/beets-check"
classifiers = [
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Programming Language :: Python :: 3",
]
packages = [{ include = "beetsplug" }]

[tool.poetry.dependencies]
python = "^3.9, >=3.8.1"
beets = ">=1.6.1, <3"
mediafile = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.5.1"

[tool.ruff]
target-version = "py38"
unsafe-fixes = true
preview = true

[tool.ruff.lint]
extend-select = [
  "I", # Sort imports
  "C", # Pyflakes conventions
  # "PTH",  # Use pathlib instead of os
  "PIE",  # Misc. lints
  "UP",   # Enforce modern Python syntax
  "FURB", # Also enforce more modern Python syntax
  "PT",   # Pytest style
  "B",    # Bugbear, avoid common sources of bugs
  "SIM",  # Simplify
  "T20",  # Warn about `print()`
  "RUF",
  "C4",   # List comprehension
]
ignore = [
  # Pyright checks for unused imports and does it better.
  "F401",
  # ternary can be less readable
  "SIM108",
  # Ignore complexity
  "C901",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
