[project]
name = "beets-check"
version = "0.15.3"
description = "beets plugin verifying file integrity with checksums"
authors = [{ name = "Thomas Scholtes", email = "geigerzaehler@axiom.fm" }]
license = "MIT"
readme = "README.md"
repository = "http://www.github.com/geigerzaehler/beets-check"
classifiers = [
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Programming Language :: Python :: 3",
]
packages = [{ include = "beetsplug" }]
dependencies = ["beets >=2, <3", "mediafile >=0.13.0"]
requires-python = ">=3.10"

[dependency-groups]
dev = ["pytest >=8", "ruff >=0.14"]

[tool.ruff]
target-version = "py39"
unsafe-fixes = true
preview = true

[tool.ruff.lint]
extend-select = [
  "I", # Sort imports
  "C", # Pyflakes conventions
  # "PTH",  # Use pathlib instead of os
  "PIE",  # Misc. lints
  "UP",   # Enforce modern Python syntax
  "FURB", # Also enforce more modern Python syntax
  "PT",   # Pytest style
  "B",    # Bugbear, avoid common sources of bugs
  "SIM",  # Simplify
  "T20",  # Warn about `print()`
  "RUF",
  "C4",   # List comprehension
]
ignore = [
  # Pyright checks for unused imports and does it better.
  "F401",
  # ternary can be less readable
  "SIM108",
  # Ignore complexity
  "C901",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["beetsplug/*.py"]

[tool.hatch.build.targets.wheel]
include = ["beetsplug/*.py"]
